--- a/final_assignment/final_assignment.Rmd
+++ b/final_assignment/final_assignment.Rmd
@@ -34,6 +34,8 @@ knitr::opts_chunk$set(
 )
 ```
 
+# Package Loading
+
 ```{r initialise-libraries, echo=FALSE}
 
 library(googlesheets4)
@@ -1119,5 +1121,26 @@ ggplot(industry_race_top5, aes(y = reorder(industry_cleaned, value), x = value, 
 
 ```{r}
 
+mosaic::favstats(ask_a_manager_2021_cleaned$salary_usd)
+
+ask_a_manager_2021_cleaned%>%
+  filter(salary_usd > 10000000)
+
+test <- ask_a_manager_2021_cleaned%>%
+  group_by(country)%>%
+  mutate(num_responses_country = n())%>%
+  ungroup()%>%
+  filter(num_responses_country > 50)
+
+ggplot(test,aes(x = as.numeric(salary_usd)))+
+  geom_density()+
+  scale_x_continuous(limits = c(0, 1000000))+
+  facet_wrap(~country)+
+  theme_bw()
+
+
+ggplot(test, aes(salary_usd, country))+
+  geom_boxplot()+
+  scale_x_log10()
 ```
 
